--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -27,11 +27,14 @@
     <ClCompile Include="main_21.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main_22.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="func.cpp">
       <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_22~27.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_28.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
