--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -36,7 +36,10 @@
     <ClCompile Include="main_28~30.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main_31~35.cpp">
+    <ClCompile Include="main_31~36.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main_37~38.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
