--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="main_37~39.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main_40~.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="func.h">
